fix distorted icons, hopefully

--- a/src/components/todo.css
+++ b/src/components/todo.css
@@ -59,6 +59,11 @@
     justify-content: center; /* Centers horizontally */
 }
 
+.icon-button > img {
+	width: 36px;
+	height: 20px;
+}
+
 .icon-button:hover {
 	background: rgba(121, 121, 121, 0.1);
 }
